# fpp

./: CMakeLists.txt  LICENSE  README.md
bindings/: fpp.py  fpp_bindings.cpp
examples/: examples.fpp
include/: ast.hpp  codegen.hpp  ir.hpp  lexer.hpp  parser.hpp  runtime.hpp  types.hpp
src/: codegen.cpp  ir.cpp  lexer.cpp  parser.cpp  runtime.cpp  types.cpp
stdlib/: stdlib.cpp
tools/: main.cpp  tests.cpp
